Cleans up a bunch of warnings and issues flagged by FindBugs.